--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.9.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -21,7 +22,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "prebuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://github.com/0seo8/twitter_clone.git",
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "eslint-config-prettier": "^8.5.0",
